--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="icon" href="/calculator/assets/calculator-icon.png" type="image/png+xml">
+    <link rel="icon" href="./assets/calculator-icon.png" type="image/png+xml">
 </head>
 <body>
     <div>
