--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js"></script>
     <link rel="icon" href="./assets/calculator-icon.png" type="image/png+xml">
 </head>
+<meta name="google-site-verification" content="1s498kagRjosspqziWUh2uhQIr_-XGpY1hKx7e6tVPE" />
 <body>
     <div>
         <div class="C-body">
